mise à jour : lien exploitable du header, réarrangement des fichier scss

--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
 @import url("https://fonts.googleapis.com/css?family=Devonshire&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Croissant+One&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Cookie&display=swap");
