--- a/Projets/OhMyFood/scss/main.scss
+++ b/Projets/OhMyFood/scss/main.scss
@@ -1,3 +1,8 @@
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
+/* IMPORTANT ! run sass with the command : npm run sass*/
+
 @import "./partials/Utils/variables";
 @import "./partials/Utils/mixins";
 @import "./partials/Components/animations";
